[ADDED] pack mesh
Former-commit-id: 0661fbd7691a93df81932c924e27506f4628caa7

--- a/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
+++ b/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
@@ -168,6 +168,14 @@
 				RelativePath="..\..\..\src\libsprpacker\PackTrans.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\PackVertices.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libsprpacker\PackVertices.h"
+				>
+			</File>
 			<Filter
 				Name="01.image"
 				>
@@ -361,6 +369,26 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\libsprpacker\PackMaskSpr.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="11.mesh"
+				>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackMesh.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackMesh.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackMeshSpr.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackMeshSpr.h"
 					>
 				</File>
 			</Filter>
