[ADDED] pack shape
Former-commit-id: dc7a5957852b6040e8836afb2b9de66f2b0bbaca

--- a/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
+++ b/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
@@ -392,6 +392,26 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="10.shape"
+				>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackShape.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackShape.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackShapeSpr.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackShapeSpr.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="tools"
