--- a/gum/platform/msvc2008/projects/gum.vcproj
+++ b/gum/platform/msvc2008/projects/gum.vcproj
@@ -571,6 +571,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\include\gum\ShapeType.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\sprite\TexturePolygon.cpp"
 					>
 				</File>
