[ADDED] pack texture
Former-commit-id: d56fc8db950d3bb82764b2085b0e63bbfb452f4a

--- a/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
+++ b/easysprpacker/platform/msvc2008/projects/libsprpacker.vcproj
@@ -251,6 +251,14 @@
 					RelativePath="..\..\..\src\libsprpacker\PackTexture.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackTextureSpr.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libsprpacker\PackTextureSpr.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="06.complex"
