--- a/sprite2/platform/msvc2008/projects/sprite2.vcproj
+++ b/sprite2/platform/msvc2008/projects/sprite2.vcproj
@@ -364,6 +364,14 @@
 				RelativePath="..\..\..\include\sprite2\SprTimer.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\source\sprites\TexcoordsMap.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\sprite2\TexcoordsMap.h"
+				>
+			</File>
 			<Filter
 				Name="image"
 				>
