[ADDED] s2 as submodule
Former-commit-id: 4e71dbe4e227eeaa3c7bd9d3361ca9d55f07f553

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "cu/src/cu"]
 	path = cu/src/cu
 	url = ssh://git@tea.ejoy.com:3222/LR/cu.git
+[submodule "sprite2"]
+	path = sprite2
+	url = ssh://git@tea.ejoy.com:3222/LR/sprite2.git
