--- a/easyskeleton/platform/msvc2008/projects/easyskeleton.vcproj
+++ b/easyskeleton/platform/msvc2008/projects/easyskeleton.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="6.easybone"
+	Name="6.easyskeleton"
 	ProjectGUID="{263EF43F-42E5-4DAC-8221-108A8AF48C0B}"
-	RootNamespace="easybone"
+	RootNamespace="easyskeleton"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
 	>
@@ -18,8 +18,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="..\easybone\x86\Debug"
-			IntermediateDirectory="..\easybone\x86\Debug\obj"
+			OutputDirectory="..\easyskeleton\x86\Debug"
+			IntermediateDirectory="..\easyskeleton\x86\Debug\obj"
 			ConfigurationType="1"
 			CharacterSet="1"
 			>
@@ -47,8 +47,8 @@
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
-				AssemblerListingLocation="..\easybone\x86\Debug"
-				ProgramDataBaseFileName="..\easybone\x86\Debug\easybone.pdb"
+				AssemblerListingLocation="..\easyskeleton\x86\Debug"
+				ProgramDataBaseFileName="..\easyskeleton\x86\Debug\easyskeleton.pdb"
 				WarningLevel="3"
 				DebugInformationFormat="4"
 			/>
@@ -64,12 +64,12 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="wxmsw30ud_gl.lib wxmsw30ud_propgrid.lib wxmsw30ud_adv.lib wxmsw30ud_stc.lib wxmsw30ud_core.lib wxbase30ud.lib wxscintillad.lib wxtiffd.lib wxjpegd.lib wxpngd.lib wxzlibd.lib comctl32.lib rpcrt4.lib glew32s.lib jsond.lib freetype250_D.lib luad.lib libpngd.lib cjsond.lib pthreadVC2.lib lzmad.lib"
-				OutputFile="..\easybone\x86\Debug\easybone.exe"
+				OutputFile="..\easyskeleton\x86\Debug\easyskeleton.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;..\..\..\..\editor-external\wx\lib&quot;;&quot;..\..\..\..\editor-external\gl\lib&quot;;&quot;..\..\..\..\editor-external\json\lib&quot;;&quot;..\..\..\..\editor-external\freetype\lib&quot;;&quot;..\..\..\..\editor-external\libpng\lib&quot;;&quot;..\..\..\..\editor-external\lua\lib&quot;;&quot;..\..\..\..\editor-external\intel&quot;;&quot;..\..\..\..\editor-external\lzma\lib&quot;;&quot;..\..\..\..\editor-external\cjson\lib&quot;;&quot;..\..\..\..\editor-external\pthread\lib\x86&quot;;&quot;..\..\..\..\editor-external\boost\lib&quot;"
 				IgnoreDefaultLibraryNames="LIBC.LIB"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="..\easybone\x86\Debug\easybone.pdb"
+				ProgramDatabaseFile="..\easyskeleton\x86\Debug\easyskeleton.pdb"
 				SubSystem="2"
 				TargetMachine="1"
 			/>
@@ -97,8 +97,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="..\easybone\x86\Release"
-			IntermediateDirectory="..\easybone\x86\Release\obj"
+			OutputDirectory="..\easyskeleton\x86\Release"
+			IntermediateDirectory="..\easyskeleton\x86\Release\obj"
 			ConfigurationType="1"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
@@ -127,8 +127,8 @@
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
-				AssemblerListingLocation="..\easybone\x86\Release"
-				ProgramDataBaseFileName="..\easybone\x86\Release\easybone.pdb"
+				AssemblerListingLocation="..\easyskeleton\x86\Release"
+				ProgramDataBaseFileName="..\easyskeleton\x86\Release\easyskeleton.pdb"
 				WarningLevel="3"
 				DebugInformationFormat="3"
 			/>
@@ -144,12 +144,12 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="wxmsw30u_gl.lib wxmsw30u_propgrid.lib wxmsw30u_adv.lib wxmsw30u_stc.lib wxmsw30u_core.lib wxbase30u.lib wxscintilla.lib wxtiff.lib wxjpeg.lib wxpng.lib wxzlib.lib comctl32.lib rpcrt4.lib glew32s.lib json.lib freetype250.lib lua.lib libpng.lib cjson.lib pthreadVC2.lib lzma.lib"
-				OutputFile="..\easybone\x86\Release\easybone.exe"
+				OutputFile="..\easyskeleton\x86\Release\easyskeleton.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;..\..\..\..\editor-external\wx\lib&quot;;&quot;..\..\..\..\editor-external\gl\lib&quot;;&quot;..\..\..\..\editor-external\json\lib&quot;;&quot;..\..\..\..\editor-external\freetype\lib&quot;;&quot;..\..\..\..\editor-external\libpng\lib&quot;;&quot;..\..\..\..\editor-external\lua\lib&quot;;&quot;..\..\..\..\editor-external\intel&quot;;&quot;..\..\..\..\editor-external\lzma\lib&quot;;&quot;..\..\..\..\editor-external\cjson\lib&quot;;&quot;..\..\..\..\editor-external\pthread\lib\x86&quot;;&quot;..\..\..\..\editor-external\boost\lib&quot;"
 				IgnoreDefaultLibraryNames="LIBC.LIB"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="..\easybone\x86\Release\easybone.pdb"
+				ProgramDatabaseFile="..\easyskeleton\x86\Release\easyskeleton.pdb"
 				StripPrivateSymbols=""
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -183,19 +183,19 @@
 	</References>
 	<Files>
 		<File
-			RelativePath="..\..\..\src\easybone\main.cpp"
+			RelativePath="..\..\..\src\easyskeleton\main.cpp"
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\easybone\main.h"
+			RelativePath="..\..\..\src\easyskeleton\main.h"
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\easybone\Task.cpp"
+			RelativePath="..\..\..\src\easyskeleton\Task.cpp"
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\easybone\Task.h"
+			RelativePath="..\..\..\src\easyskeleton\Task.h"
 			>
 		</File>
 		<File
