[ADDED] skeleton translate
Former-commit-id: 52a7119fe08201e4ea247e024ade3613a6534350

--- a/easyskeleton/platform/msvc2008/projects/libskeleton.vcproj
+++ b/easyskeleton/platform/msvc2008/projects/libskeleton.vcproj
@@ -224,6 +224,14 @@
 				Name="skeleton"
 				>
 				<File
+					RelativePath="..\..\..\src\libskeleton\Bone.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libskeleton\Bone.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libskeleton\Joint.cpp"
 					>
 				</File>
