[ADDED] FixLRP3dLayer
Former-commit-id: 08a19036b63f68da359064ed47b46af0ed3ecf97

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -638,6 +638,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\FixLRP3dLayer.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\FixLRP3dLayer.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb_cl\FixMirror.cpp"
 					>
 				</File>
