[ADDED] set name dlg
Former-commit-id: ac523ed7f2c9d09446ae38ad58197e1f9b9dac58

--- a/easyeditor/platform/msvc2008/projects/libview.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libview.vcproj
@@ -669,6 +669,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\source\view\others\SetNameDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\ee\SetNameDialog.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\view\others\SettingsDialog.cpp"
 					>
 				</File>
