[ADDED] load spine as anim
Former-commit-id: 29ef4e7fa8311116c2c667427f305b13c010804c

--- a/easyeditor/platform/msvc2008/projects/libdata.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libdata.vcproj
@@ -410,6 +410,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\include\ee\SymbolLoader.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\SymbolLoader.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\source\data\symbol\SymbolMgr.cpp"
 				>
 			</File>
