[ADDED] edit joint scale
Former-commit-id: 39eb48c571322ce890ab562812f79d9f86bfdaf1

--- a/easyskeleton/platform/msvc2008/projects/libskeleton.vcproj
+++ b/easyskeleton/platform/msvc2008/projects/libskeleton.vcproj
@@ -272,6 +272,26 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="scale"
+				>
+				<File
+					RelativePath="..\..\..\src\libskeleton\ScaleJointAOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libskeleton\ScaleJointAOP.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libskeleton\ScaleJointState.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libskeleton\ScaleJointState.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
