[ADDED] tag cfg
Former-commit-id: 5a453918a37a953f34f0004220be16d72f36ce60

--- a/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
+++ b/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
@@ -1144,6 +1144,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\librespacker\PackTag.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\librespacker\PackTag.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\librespacker\PackUI.cpp"
 					>
 				</File>
